praxis.live.pxj - fixes boot classpath for source files on Java 11+ and provides source level query implementation.